changed favicon img with a the correct transparent background. yey

--- a/templates/master.html
+++ b/templates/master.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<!-- The Basics -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta
-		name="viewport"
-		content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>{{ title }}</title>
 
 	<!-- Primary Meta Tags -->
 	<meta name="title" content="{{ title }}">
 	<meta name="description" content="{{ description }}">
-	<meta name="application-name" content="{{ author }}"/>
+
 
 
 	<!-- Open Graph / Facebook -->
@@ -51,7 +50,7 @@
 
 
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
-	
+
 	<meta name="msapplication-TileImage" content="/assets/favicomatic/mstile-144x144.png" />
 	<meta name="msapplication-square70x70logo" content="/assets/favicomatic/mstile-70x70.png" />
 	<meta name="msapplication-square150x150logo" content="/assets/favicomatic/mstile-150x150.png" />
@@ -61,26 +60,16 @@
 
 	<!-- STYLESHEETS -->
 	{{{ styles }}}
-	<link
-		rel="stylesheet"
-		type="text/css"
-		href="/css/layout.css" />
-		
-	<link
-		rel="stylesheet"
-		type="text/css"
-		media="(min-width: 960px)"
-		href="/css/wide.css" />
+	<link rel="stylesheet" type="text/css" href="/css/layout.css" />
 
-	<link
-		rel="stylesheet"
-		type="text/css"
-		href="/css/theme.css" />
+	<link rel="stylesheet" type="text/css" media="(min-width: 960px)" href="/css/wide.css" />
+
+	<link rel="stylesheet" type="text/css" href="/css/theme.css" />
 
 	<!-- SCRIPTS -->
 	{{{ scripts }}}
 	<script src="/js/menu.js" type="module"></script>
-	
+
 	<!---->
 </head>
 
@@ -107,7 +96,7 @@
 							<!-- front wheel -->
 							<circle cx="280" cy="230" r="100" />
 							<line x1="280" y1="330" x2="280" y2="130" />
-							<rect x1="280" y1="330" x2="280" y2="130" ></rect>
+							<rect x1="280" y1="330" x2="280" y2="130"></rect>
 							<line x1="180" y1="230" x2="380" y2="230" />
 							<line x1="350" y1="160" x2="210" y2="300" />
 							<line x1="210" y1="160" x2="350" y2="300" />
@@ -142,10 +131,13 @@
 			<div class="intro">
 				<h2>Hi! I am a Junior Web-Developer</h2>
 				<p>
-					My journey as a developer began at the end of 2021 when I made the decision to quit my job in London and become a web developer whille surfing in Portugal.
+					My journey as a developer began at the end of 2021 when I made the decision to quit my job in London and
+					become a web developer whille surfing in Portugal.
 					Along this jorney I have learned to appreciate the balance between easy to read and "DRY" code.
-					Combining my love for surfing and coding, I immerse myself in building exciting web apps every day using HTML, CSS, and JavaScript.
-					While aspiring to become a lead developer, my current focus is on continuously improving my skills to become the best possible developer.
+					Combining my love for surfing and coding, I immerse myself in building exciting web apps every day using
+					HTML, CSS, and JavaScript.
+					While aspiring to become a lead developer, my current focus is on continuously improving my skills to
+					become the best possible developer.
 				</p>
 				<button id="cvButton">View CV</button>
 			</div>
@@ -156,14 +148,14 @@
 				<img class="italy" src="./assets/header/italy.png" />
 				<img class="shoes" src="./assets/header/shoes.png" />
 				<img class="plane" src="./assets/header/plane.png" />
-				<img class="leaf leaf-08"src="./assets/header/leaf07.png" />
-				<img class="leaf leaf-07"src="./assets/header/leaf07.png" />
-				<img class="leaf leaf-06"src="./assets/header/leaf06.png" />
-				<img class="leaf leaf-05"src="./assets/header/leaf05.png" />
-				<img class="leaf leaf-04"src="./assets/header/leaf04.png" />
-				<img class="leaf leaf-03"src="./assets/header/leaf03.png" />
-				<img class="leaf leaf-02"src="./assets/header/leaf02.png" />
-				<img class="leaf leaf-01"src="./assets/header/leaf01.png" />
+				<img class="leaf leaf-08" src="./assets/header/leaf07.png" />
+				<img class="leaf leaf-07" src="./assets/header/leaf07.png" />
+				<img class="leaf leaf-06" src="./assets/header/leaf06.png" />
+				<img class="leaf leaf-05" src="./assets/header/leaf05.png" />
+				<img class="leaf leaf-04" src="./assets/header/leaf04.png" />
+				<img class="leaf leaf-03" src="./assets/header/leaf03.png" />
+				<img class="leaf leaf-02" src="./assets/header/leaf02.png" />
+				<img class="leaf leaf-01" src="./assets/header/leaf01.png" />
 			</div>
 		</section>
 		{{ /is_home }}
@@ -172,12 +164,12 @@
 	<input type="checkbox" id="menu-toggle" class="menu-toggle" />
 	<nav>
 		<a href="/">
-			<svg class="moving-bike logo" viewBox="0 0 400 400" >
+			<svg class="moving-bike logo" viewBox="0 0 400 400">
 				<g class="bike">
 					<!-- back wheel -->
 					<circle class="wheel01" cx="110" cy="280" r="50" />
 					<g class="back-wheel">
-					<!-- horisontal line -->
+						<!-- horisontal line -->
 						<line x1="60" y1="280" x2="160" y2="280" />
 						<!-- 45 angle line -->
 						<line x1="75" y1="245" x2="145" y2="315" />
@@ -207,11 +199,11 @@
 					<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
 				</g>
 				<defs>
-				<!-- gradient -->
-				<linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
-					<stop class="light" offset="0%" />
-					<stop class="dark" offset="100%" />
-				</linearGradient>
+					<!-- gradient -->
+					<linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+						<stop class="light" offset="0%" />
+						<stop class="dark" offset="100%" />
+					</linearGradient>
 				</defs>
 			</svg>
 		</a>
@@ -220,13 +212,13 @@
 				<div class="logo">
 					<svg viewBox="0 0 400 400">
 						<circle class="main-circle" cx="200" cy="200" r="200" />
-							<defs>
+						<defs>
 							<!-- gradient -->
 							<linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
 								<stop class="light" offset="0%" />
 								<stop class="dark" offset="100%" />
 							</linearGradient>
-							</defs>
+						</defs>
 					</svg>
 				</div>
 			</a>
@@ -235,14 +227,14 @@
 		<section class="nav-main wrapper">
 
 			<ul class="menu-list">
-			{{ #menu }}
+				{{ #menu }}
 				<li>
 					<figure>
 						<img src="{{ img_src }}" alt="{{ img_alt }}">
 					</figure>
 					<a href="{{ path }}">{{ title }}</a>
 				</li>
-			{{ /menu }}
+				{{ /menu }}
 			</ul>
 
 		</section>
@@ -252,10 +244,11 @@
 	</main>
 	<footer class="wrapper">
 		{{ #footer }}
-			<a href="{{ path }}">{{ title }}</a>
-			<!-- &copy; Paula Burghelea {{ year }} -->
+		<a href="{{ path }}">{{ title }}</a>
+		<!-- &copy; Paula Burghelea {{ year }} -->
 		{{ /footer }}
 	</footer>
-	
+
 </body>
+
 </html>
