About page redone and modified the general page_route logic to acomodate more Css files for each screen size

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,7 @@
 	<header class="cv_header">
 		<div class="photo">
 			<figure>
-				<img
-					src="/assets/img/profile_ai.jpg"
-					alt="profile picture" />
+				<img src="/assets/img/profile_ai.jpg" alt="profile picture" />
 			</figure>
 		</div>
 		<hgroup>
@@ -14,7 +12,8 @@
 	<section class="profile">
 		<h3>Profile</h3>
 		<p>
-			“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”
+			“Any fool can write code that a computer can understand. Good programmers write code that humans can
+			understand.”
 			― Martin Fowler
 		</p>
 	</section>
@@ -32,20 +31,25 @@
 					<li>
 						Technical Account Manager
 					</li>
-						<ul>
-							<li>Dedicated support engineer for 5 large Twilio EMEA and APAC Clients</li>
-							<li>Resposible for understarding customer integration for Twilio products such as SMS, Voice, and phone regulatory issues.</li>
-							<li>Identifyied trends based on reposted issues and presented my findings during the weekly meetings or QBRs</li>
-						</ul>
+					<ul>
+						<li>Dedicated support engineer for 5 large Twilio EMEA and APAC Clients</li>
+						<li>Resposible for understarding customer integration for Twilio products such as SMS, Voice, and
+							phone regulatory issues.</li>
+						<li>Identifyied trends based on reposted issues and presented my findings during the weekly meetings
+							or QBRs</li>
+					</ul>
 					<li>
 						Customer Success Manager II
 					</li>
-						<ul>
-							<li>Managed a portfolio of 36 accounts</li>
-							<li>Initiated contract renewal conversation and worked with the AE to identify any upsell opportunities</li>
-							<li>Assisted with more complex technical issues and helped escalate internally while finding the appropriate resources</li>
-							<li>Identified and added customers to new beta features and provided feedback for the product team</li>
-						</ul>
+					<ul>
+						<li>Managed a portfolio of 36 accounts</li>
+						<li>Initiated contract renewal conversation and worked with the AE to identify any upsell
+							opportunities</li>
+						<li>Assisted with more complex technical issues and helped escalate internally while finding the
+							appropriate resources</li>
+						<li>Identified and added customers to new beta features and provided feedback for the product team
+						</li>
+					</ul>
 				</ol>
 			</li>
 			<li>
@@ -59,14 +63,17 @@
 					<li>
 						Customer Success Manager
 					</li>
-						<ul>
-							<li>Managed a portfolio of up to 70 accounts</li>
-							<li>Organised and conducted monthly customer meetings and QBRs</li>
-							<li>Worked with each customer to identify measurable KPIs for their email program and review KPI performance</li>
-							<li>Provided feedback to the product team and help with new feature requests</li>
-							<li>Initiated contract renewal conversation and uncovered additional service opportunities for the AEs</li>
-							<li>Helped to escalate technical issues escalation and worked with support to optimize the resolution process</li>
-						</ul>
+					<ul>
+						<li>Managed a portfolio of up to 70 accounts</li>
+						<li>Organised and conducted monthly customer meetings and QBRs</li>
+						<li>Worked with each customer to identify measurable KPIs for their email program and review KPI
+							performance</li>
+						<li>Provided feedback to the product team and help with new feature requests</li>
+						<li>Initiated contract renewal conversation and uncovered additional service opportunities for the AEs
+						</li>
+						<li>Helped to escalate technical issues escalation and worked with support to optimize the resolution
+							process</li>
+					</ul>
 				</ul>
 			</li>
 			<li>
@@ -78,27 +85,33 @@
 				</hgroup>
 				<ul class="roles">
 					<li>Team Manager</li>
-						<ul>
-							<li>Assumed ownership over team productivity and managed workflow to meet or exceed service quality goals (identified measurable KPIs and helped the team to achieve and maintain the success line)</li>
-							<li>Handled staffing responsibilities for team by creating and maintaining monthly schedule</li>
-							<li>Identified individual development needs with appropriate training</li>
-							<li>Facilitated inter-departmental communication to provide customer support efficiently</li>
-							<li>Maintained high departmental standards for quality and productivity metrics. (continuously reviewed tickets and chats answered given by the clients)</li>
-						</ul>
+					<ul>
+						<li>Assumed ownership over team productivity and managed workflow to meet or exceed service quality
+							goals (identified measurable KPIs and helped the team to achieve and maintain the success line)
+						</li>
+						<li>Handled staffing responsibilities for team by creating and maintaining monthly schedule</li>
+						<li>Identified individual development needs with appropriate training</li>
+						<li>Facilitated inter-departmental communication to provide customer support efficiently</li>
+						<li>Maintained high departmental standards for quality and productivity metrics. (continuously
+							reviewed tickets and chats answered given by the clients)</li>
+					</ul>
 					<li>Senior Technical Support Engineer</li>
-						<ul>
-							<li>Researched, troubleshot and resolved complex problems independently</li>
-							<li>Provided on-call support for critical issues</li>
-							<li>Defined and documented technical best practices</li>
-							<li>Team lead responsibilities - worked closely with team members to meet or exceed all customer service requirements</li>
-						</ul>
+					<ul>
+						<li>Researched, troubleshot and resolved complex problems independently</li>
+						<li>Provided on-call support for critical issues</li>
+						<li>Defined and documented technical best practices</li>
+						<li>Team lead responsibilities - worked closely with team members to meet or exceed all customer
+							service requirements</li>
+					</ul>
 					<li>Junior Technical Support Engineer</li>
-						<ul>
-							<li>Troubleshoot and guided customers through integration steps, including identifying system and site-specific app/code issues</li>
-							<li>Resposible for activating new accounts</li>
-							<li>Managed customers' expectations and experience to a high degree of customer satisfaction (average personal satisfaction score constantly above 90%)</li>
-							<li>Enthusiastically participated in job-related training.</li>
-						</ul>
+					<ul>
+						<li>Troubleshoot and guided customers through integration steps, including identifying system and
+							site-specific app/code issues</li>
+						<li>Resposible for activating new accounts</li>
+						<li>Managed customers' expectations and experience to a high degree of customer satisfaction (average
+							personal satisfaction score constantly above 90%)</li>
+						<li>Enthusiastically participated in job-related training.</li>
+					</ul>
 				</ul>
 			</li>
 		</ol>
@@ -140,8 +153,10 @@
 				</hgroup>
 				<ul>
 					<li>Developed and deployed full Stack applications over the course of a 30 weeks bootcamp program;</li>
-					<li>Lerned about the constituent parts of the internet and websites / web applications: The client-server model (inc. APIs);</li>
-					<li>Programming languages and libraries to control those constituent parts e.g. HTML, CSS, JavaScript (inc. NodeJS & React), SQL/NoSQL, Shell, GraphQL, JSON;</li>
+					<li>Lerned about the constituent parts of the internet and websites / web applications: The client-server
+						model (inc. APIs);</li>
+					<li>Programming languages and libraries to control those constituent parts e.g. HTML, CSS, JavaScript
+						(inc. NodeJS & React), SQL/NoSQL, Shell, GraphQL, JSON;</li>
 					<li>Learned how to use tools & systems to create, edit, debug, test, deploy & host my code;</li>
 					<li>Learned about industry standards and best practice for writing software.</li>
 				</ul>
@@ -159,7 +174,9 @@
 					</h6>
 				</hgroup>
 				<p>
-					Learned to build  an action-oriented framework for the team and each individual. This increased both the quantity and quality of performance conversations by matching an individual’s Performance Readiness Level for a specific task with the appropriate leadership style.
+					Learned to build an action-oriented framework for the team and each individual. This increased both the
+					quantity and quality of performance conversations by matching an individual’s Performance Readiness Level
+					for a specific task with the appropriate leadership style.
 				</p>
 			</li>
 			<li>
