--- a/templates/index.html
+++ b/templates/index.html
@@ -22,15 +22,118 @@
 		<ol class="jobs">
 			<li>
 				<hgroup>
+					<h4>Full Stack Developer - CodeOp - Remote</h4>
+					<h5 class="time-interval">
+						<time datetime="2023-07">Jul 2023</time> - <time datetime="2023-09">Sep 2023</time>
+					</h5>
+				</hgroup>
+				<ul class="roles">
+					<ul>
+						<li>Demonstrated problem-solving skills by tackling complex coding challenges and implementing
+							efficient
+							solutions</li>
+						<li>Built 3 full stack projects: an MVP, a Feature Extension and a Group Project</li>
+					</ul>
+					<li>Group Project - NFT e-commerce app -
+						<a href="https://desolate-harbor-25583-d0e8904996eb.herokuapp.com/">Heroku App</a>
+					</li>
+					<ul>
+						<li>Full stack app: online store where people can buy fashion NFTs</li>
+						<li>Created cart context: allow users to interact with the cart: add products, modify the quantity,
+							update the item's price, quantity, and total cost, and remove items</li>
+						<li>Built Auth Context: created back-end routes, registration, and contact us form with SendGrid
+							API for sending emails</li>
+						<li>Built with: MySQL, Express, Node.js, Vite, React.js, React React Router, TailwindCSS, CSS,
+							Figma, Postman, SendGrid APIs, Stripe</li>
+					</ul>
+					<li>Feature Extension - Rota App - <a
+							href="https://github.com/PaulaBurgheleaGithub/MVP-Feature-Extenstion">Github</a>
+					</li>
+					<ul>
+						<li>Full stack app that helps flatmates organise their apartment tasks & and bills.</li>
+						<li>Implemented the billing feature that allows users to keep track of their bills: a page where
+							they can view, sort, and share bills with their flatmates as well as assign bills to be paid
+						</li>
+						<li>Improved the app's existing layout by upgrading the design</li>
+						<li>Built with: MySQL, Express, Node.js, Vite, React.js, React Router, CSS, Bootstrap</li>
+					</ul>
+					<li>MVP - Travelette App - <a href="https://github.com/PaulaBurgheleaGithub/travelette">Github</a></li>
+					<ul>
+						<li>Full stack app that helps people organize personal or group travel expenses in various
+							currencies</li>
+						<li>Main features: transactions page where users can view, sort, and edit past payments. All
+							entries and changes are saved in the database</li>
+						<li>Built with: MySQL, Express, Node.js, Vite, React.js, React Router, CSS, Bootstrap, Figma,
+							Postman, and Wise APIs</li>
+					</ul>
+				</ul>
+			</li>
+			<li>
+				<hgroup>
+					<h4>Freelancer - Front-End Developer - Remote</h4>
+					<h5 class="time-interval">
+						<time datetime="2019-03">Jun 2022</time> - <time datetime="2021-11">Mar 2023</time>
+					</h5>
+				</hgroup>
+				<ul class="roles">
+					<ul>
+						<li>Practiced writing pseudo code and problem-solving, completed 100+ code challenges on codewars</li>
+						<li>Worked closely with a mentor to solidify my front-end knowledge</li>
+					</ul>
+					<li>Personal Website - mycupoflatte.com</li>
+					<ul>
+						<li>Portfolio website showcasing my experience in building end-to-end: design, implementation,
+							deployment</li>
+						<li>Built with: Express, Node.js, JavaScript, CSS3, HTML5, Mustache</li>
+					</ul>
+					<li>Project Scaffolding Bash Script - <a href="https://github.com/PaulaB-Projects/gen">Gitbub Repo</a>
+					</li>
+					<ul>
+						<li>Created bash script to automate project scaffolding (express web server and electron app)</li>
+					</ul>
+				</ul>
+			</li>
+			<li>
+				<hgroup>
+					<h4>Software Engineering Bootcamp - The Jump - Remote</h4>
+					<h5 class="time-interval">
+						<time datetime="2021-10">Oct 2021</time> - <time datetime="2022-05">May 2022</time>
+					</h5>
+				</hgroup>
+				<ul class="roles">
+					<ul>
+						<li>6 month part-time bootcamp covering front end technologies: HTML, CSS3, XML, JavaScript ES6+</li>
+						<li>Developed front-end websites and web applications to a professional standard</li>
+					</ul>
+					<li>JS Project - Timer JS Libary</li>
+					<ul>
+						<li>Created a JS timer library that can be used for future projects to help calculate the time span
+							between any two given time values</li>
+						<li>Built with: JS, node.js</li>
+					</ul>
+					<li>Website Project - Clipboard</li>
+					<ul>
+						<li>Responsive website built to match mobile, tablet, and desktop design provided</li>
+						<li>Learned to read/use design specifications on Figma</li>
+						<li>Built with: HTML, CSS3, Figma</li>
+					</ul>
+					<li>Homage - Website Project</li>
+					<ul>
+						<li>Created a home page copy of the website - studio-ninetyone.com</li>
+						<li>The main goal was to practice all HTML and CSS concepts as well as responsive web design</li>
+						<li>Built with: HTML, CSS</li>
+					</ul>
+				</ul>
+			</li>
+			<li>
+				<hgroup>
 					<h4>Twilio Inc. - London, England, UK</h4>
 					<h5 class="time-interval">
 						<time datetime="2019-03">Mar 2019</time> - <time datetime="2021-11">Nov 2021</time>
 					</h5>
 				</hgroup>
 				<ol class="roles">
-					<li>
-						Technical Account Manager
-					</li>
+					<li>Technical Account Manager</li>
 					<ul>
 						<li>Dedicated support engineer for 5 large Twilio EMEA and APAC Clients</li>
 						<li>Resposible for understarding customer integration for Twilio products such as SMS, Voice, and
@@ -38,9 +141,7 @@
 						<li>Identifyied trends based on reposted issues and presented my findings during the weekly meetings
 							or QBRs</li>
 					</ul>
-					<li>
-						Customer Success Manager II
-					</li>
+					<li>Customer Success Manager II</li>
 					<ul>
 						<li>Managed a portfolio of 36 accounts</li>
 						<li>Initiated contract renewal conversation and worked with the AE to identify any upsell
@@ -121,13 +222,18 @@
 		<ul>
 			<li>HTML5, SVG &amp; XML</li>
 			<li>CSS3, Saas</li>
+			<li>Bootstrap, Tailwind CSS</li>
 			<li>JavaScript(ES6) and RESTful APIs</li>
+			<li>React.js, Vue.js, Express, Next and other frameworks</li>
+			<li>JSON Web Token, Bcrypt, Jest</li>
+			<li>Databases &amp; MySQL</li>
+			<li>Git, Bash</li>
+			<li>Postman, Figma, Heroku</li>
+			<li></li>
 			<li>.NET C#</li>
-			<li>React.js, Express and other frameworks</li>
 			<li>Troubleshooting &amp; Technical Support</li>
 			<li>Email: SMTP, DNS, Deliverability &amp; Spam Filtering</li>
 			<li>SMPP &amp; Voice</li>
-			<li>Databases &amp; SQL</li>
 			<li>Google Docs &amp; Microsoft Office</li>
 		</ul>
 	</section>
@@ -146,10 +252,24 @@
 			<li>
 				<hgroup>
 					<h6>
-						<time datetime="2022">2022</time>
+						<time datetime="2023">2023</time>
 					</h6>
-					<h4>Software Engineering Course</h4>
-					<h5>The Jump Digital School - Remote, UK</h5>
+					<h4>Full Stack Development Bootcamp</h4>
+					<h5>CodeOp - Remote, UK</h5>
+				</hgroup>
+				<ul>
+					<li>3-month full-time bootcamp covering full stack technologies: JavaScript ES6+, React.js, ReactContext
+						API, Node/Express and MySQL, HTML and CSS
+					</li>
+				</ul>
+			</li>
+			<li>
+				<hgroup>
+					<h6>
+						<time datetime="2021">2021</time>
+					</h6>
+					<h4>Software Engineering Bootcamp</h4>
+					<h5>The Jump Digital School - Remote, Portugal</h5>
 				</hgroup>
 				<ul>
 					<li>Developed and deployed full Stack applications over the course of a 30 weeks bootcamp program;</li>
