--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -53,7 +53,7 @@ body > nav {
 }
 
 svg {
-	background-color: var(--svg-bg);
+	/* background-color: var(--svg-bg); */
 }
 
 .bike {
@@ -61,7 +61,7 @@ svg {
 	stroke: #000;
 	stroke-width: 9px;
 }
-.moving-bike {
+.menu-bike {
 	background-color: transparent;
 	stroke: #faebd7;
 }
