--- a/templates/master.html
+++ b/templates/master.html
@@ -82,30 +82,32 @@
 						<circle class="main-circle" cx="200" cy="200" r="200" />
 						<g class="bike">
 							<!-- back wheel -->
-							<circle cx="110" cy="280" r="50" />
-							<!-- horisontal line -->
-							<line x1="60" y1="280" x2="160" y2="280" />
-							<!-- 45 angle line -->
-							<line x1="75" y1="245" x2="145" y2="315" />
-							<!-- vertical line -->
-							<line x1="110" y1="230" x2="110" y2="330" />
-							<!-- 135 angle line -->
-							<line x1="145" y1="245" x2="75" y2="315" />
-							<!-- midle circle -->
-							<circle cx="110" cy="280" r="7" />
+							<g class="wheel">
+								<circle cx="110" cy="280" r="50" />
+								<!-- horisontal line -->
+								<line x1="60" y1="280" x2="160" y2="280" />
+								<!-- 45 angle line -->
+								<line x1="75" y1="245" x2="145" y2="315" />
+								<!-- vertical line -->
+								<line x1="110" y1="230" x2="110" y2="330" />
+								<!-- 135 angle line -->
+								<line x1="145" y1="245" x2="75" y2="315" />
+								<!-- midle circle -->
+								<circle cx="110" cy="280" r="7" />
+							</g>
 							<!-- front wheel -->
-							<circle cx="280" cy="230" r="100" />
-							<line x1="280" y1="330" x2="280" y2="130" />
-							<rect x1="280" y1="330" x2="280" y2="130"></rect>
-							<line x1="180" y1="230" x2="380" y2="230" />
-							<line x1="350" y1="160" x2="210" y2="300" />
-							<line x1="210" y1="160" x2="350" y2="300" />
-							<!-- midle circle /butucul -->
-							<circle cx="280" cy="230" r="13" />
+							<g class="wheel">
+								<circle cx="280" cy="230" r="100" />
+								<line x1="280" y1="330" x2="280" y2="130" />
+								<rect x1="280" y1="330" x2="280" y2="130"></rect>
+								<line x1="180" y1="230" x2="380" y2="230" />
+								<line x1="350" y1="160" x2="210" y2="300" />
+								<line x1="210" y1="160" x2="350" y2="300" />
+								<!-- midle circle /butucul -->
+								<circle cx="280" cy="230" r="13" />
+							</g>
 							<!-- bike body /structure -->
 							<line class="structure" x1="280" y1="220" x2="280" y2="100" />
-							<!-- curved lines - https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths 
-							d="M x y Q x1 y1, x y-->
 							<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
 							<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
 							<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
@@ -163,55 +165,43 @@
 	</header>
 	<input type="checkbox" id="menu-toggle" class="menu-toggle" />
 	<nav>
-		<a href="/">
-			<svg class="moving-bike logo" viewBox="0 0 400 400">
-				<g class="bike">
-					<!-- back wheel -->
-					<circle class="wheel01" cx="110" cy="280" r="50" />
-					<g class="back-wheel">
-						<!-- horisontal line -->
-						<line x1="60" y1="280" x2="160" y2="280" />
-						<!-- 45 angle line -->
-						<line x1="75" y1="245" x2="145" y2="315" />
-						<!-- vertical line -->
-						<line x1="110" y1="230" x2="110" y2="330" />
-						<!-- 135 angle line -->
-						<line x1="145" y1="245" x2="75" y2="315" />
-					</g>
-					<!-- midle circle -->
-					<circle cx="110" cy="280" r="7" />
-					<!-- front wheel -->
-					<circle cx="280" cy="230" r="100" />
-					<g class="front-wheel">
-						<line x1="280" y1="330" x2="280" y2="130" />
-						<line x1="180" y1="230" x2="380" y2="230" />
-						<line x1="350" y1="160" x2="210" y2="300" />
-						<line x1="210" y1="160" x2="350" y2="300" />
-					</g>
-					<!-- midle circle /butucul -->
-					<circle cx="280" cy="230" r="13" />
-					<!-- bike body /structure -->
-					<line class="structure" x1="280" y1="220" x2="280" y2="100" />
-					<!-- curved lines - https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths 
-					d="M x y Q x1 y1, x y-->
-					<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
-					<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
-					<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
-				</g>
-				<defs>
-					<!-- gradient -->
-					<linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
-						<stop class="light" offset="0%" />
-						<stop class="dark" offset="100%" />
-					</linearGradient>
-				</defs>
-			</svg>
-		</a>
 		<div class="heading wrapper">
 			<a href="/">
 				<div class="logo">
 					<svg viewBox="0 0 400 400">
 						<circle class="main-circle" cx="200" cy="200" r="200" />
+						<g class="bike">
+							<!-- back wheel -->
+							<g class="wheel">
+								<circle cx="110" cy="280" r="50" />
+								<!-- horisontal line -->
+								<line x1="60" y1="280" x2="160" y2="280" />
+								<!-- 45 angle line -->
+								<line x1="75" y1="245" x2="145" y2="315" />
+								<!-- vertical line -->
+								<line x1="110" y1="230" x2="110" y2="330" />
+								<!-- 135 angle line -->
+								<line x1="145" y1="245" x2="75" y2="315" />
+								<!-- midle circle -->
+								<circle cx="110" cy="280" r="7" />
+							</g>
+							<!-- front wheel -->
+							<g class="wheel">
+								<circle cx="280" cy="230" r="100" />
+								<line x1="280" y1="330" x2="280" y2="130" />
+								<rect x1="280" y1="330" x2="280" y2="130"></rect>
+								<line x1="180" y1="230" x2="380" y2="230" />
+								<line x1="350" y1="160" x2="210" y2="300" />
+								<line x1="210" y1="160" x2="350" y2="300" />
+								<!-- midle circle /butucul -->
+								<circle cx="280" cy="230" r="13" />
+							</g>
+							<!-- bike body /structure -->
+							<line class="structure" x1="280" y1="220" x2="280" y2="100" />
+							<path class="structure" d="M 110 230 Q 140 110 280 110" stroke="black" fill="transparent" />
+							<path class="structure" d="M 280 100 Q 280 80 255 85" stroke="black" fill="transparent" />
+							<path class="structure" d="M 176 135 Q 140 140 130 120" stroke="black" fill="transparent" />
+						</g>
 						<defs>
 							<!-- gradient -->
 							<linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
@@ -222,7 +212,9 @@
 					</svg>
 				</div>
 			</a>
+
 			<h1>{{ site_title }}</h1>
+
 		</div>
 		<section class="nav-main wrapper">
 
