home text rewording

--- a/templates/master.html
+++ b/templates/master.html
@@ -131,15 +131,12 @@
 		{{ #is_home }}
 		<section class="wrapper home_header">
 			<div class="intro">
-				<h2>Hi! I am a Junior Web-Developer</h2>
+				<h2>Hi! I am a Full Stack Developer</h2>
 				<p>
-					My journey as a developer began at the end of 2021 when I made the decision to quit my job in London and
-					become a web developer whille surfing in Portugal.
-					Along this jorney I have learned to appreciate the balance between easy to read and "DRY" code.
-					Combining my love for surfing and coding, I immerse myself in building exciting web apps every day using
-					HTML, CSS, and JavaScript.
-					While aspiring to become a lead developer, my current focus is on continuously improving my skills to
-					become the best possible developer.
+					and since 2021 I am bringing web app ideas to life.
+					I am using JavaScript (React or Vue as a framework), Express/Next, MySql, and RestAPIs, and can create UI design using FIGMA.
+					I spend a good amount of time trying to get the visual aspect I desire but also find working on the back-end or building/testing APIs quite rewarding.
+					Each day I strive to be a trusted developer and I am currently working as a freelancer.
 				</p>
 				<button id="cvButton">View CV</button>
 			</div>
