--- a/templates/master.html
+++ b/templates/master.html
@@ -147,14 +147,17 @@
 				<img class="italy" src="./assets/header/italy.png" />
 				<img class="shoes" src="./assets/header/shoes.png" />
 				<img class="plane" src="./assets/header/plane.png" />
-				<img class="leaf leaf-08" src="./assets/header/leaf07.png" />
-				<img class="leaf leaf-07" src="./assets/header/leaf07.png" />
-				<img class="leaf leaf-06" src="./assets/header/leaf06.png" />
-				<img class="leaf leaf-05" src="./assets/header/leaf05.png" />
-				<img class="leaf leaf-04" src="./assets/header/leaf04.png" />
-				<img class="leaf leaf-03" src="./assets/header/leaf03.png" />
-				<img class="leaf leaf-02" src="./assets/header/leaf02.png" />
-				<img class="leaf leaf-01" src="./assets/header/leaf01.png" />
+				<img class="leaf leaf-09" src="./assets/svg/node-js.svg" />
+				<img class="leaf leaf-08" src="./assets/svg/code-circle.svg" />
+				<a href="https://github.com/PaulaBurgheleaGithub">
+					<img class="leaf leaf-07" src="./assets/svg/github.svg" />
+				</a>
+				<img class="leaf leaf-06" src="./assets/svg/sass.svg" />
+				<img class="leaf leaf-05" src="./assets/svg/vueJs.svg" />
+				<img class="leaf leaf-04" src="./assets/svg/figma02.svg" />
+				<img class="leaf leaf-03" src="./assets/svg/react-logo.svg" />
+				<img class="leaf leaf-02" src="./assets/svg/braces.svg" />
+				<img class="leaf leaf-01" src="./assets/svg/api.svg" />
 			</div>
 		</section>
 		{{ /is_home }}
